<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_remaining_label">Time Remaing</string>
    <string name="time_default">00:00:00</string>
    <string name="button_start">Create</string>
    <string name="label_timer_details">Timer Details</string>
    <string name="button_timer_details_next">Next</string>
    <string name="pomodoro_activity_title">Pomodoro Completed</string>
    <string name="pomodoro_activity_percentage_completed">Completed</string>
    <string name="activity_name">Activity Name</string>
    <string name="time">Time</string>
    <string name="label_stage">Stage</string>
    <string name="label_pomodoro_com">Pomodoros Completed : </string>
    <string name="label_breaks">Small Breaks Taken : </string>
    <string name="label_long_breaks">Long breaks taken : </string><string name="activity_details_pomodoros">Pomodoros</string><string name="label_no_of_small_brks">Small Breaks</string><string name="label_long_brks">Long Breaks</string>

</resources>