<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:id="@id/activity_dtls_title">

    <TextView
        android:id="@+id/activity_dtls_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
            android:layout_marginTop="20dp">
        <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_details_pomodoros"
                android:id="@id/labels_pomodoros" android:layout_gravity="left|center_vertical" android:enabled="false"
                android:gravity="center"/>
        <TextView
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@id/activity_dtls_no_of_pomodoros" android:gravity="center" android:layout_marginLeft="-212dp"
                android:layout_gravity="right|center_vertical"/>
    </FrameLayout>
    <LinearLayout
            android:id="@+id/pomodoro_img_holder"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp" android:layout_marginTop="20dp">
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_no_of_small_brks"
            android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:gravity="center"
            android:layout_marginTop="20dp"/>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/activity_dtls_no_of_small_brks"
              android:gravity="center" android:layout_marginTop="20dp"/>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/label_long_brks"
              android:id="@+id/textView2" android:gravity="center" android:layout_marginTop="20dp"/>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/avtivity_dtls_long_brks"
              android:gravity="center" android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/activity_details_next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button_timer_details_next" android:layout_marginTop="20dp"/>

</LinearLayout>